--- a/review-carousel/style.css
+++ b/review-carousel/style.css
@@ -9,7 +9,7 @@ body {
     font-size: 36px;
     position: relative;
     padding-bottom: 20px;
-    margin-top: 280px;
+    margin-top: 22vh;
 }
 
 .reviews__title::after {
@@ -32,6 +32,25 @@ body {
     margin: 75px auto;
     padding: 25px 35px;
     text-align: center;
+}
+
+.reviews__box-item-img {
+    margin: 0 auto 10px auto;
+    width: 120px;
+    height: 120px;
+    background-position: center center;
+    background-size: cover;
+    border-radius: 50%;
+}
+
+.reviews__box-item-title {
+    font-weight: 600;
+}
+
+.reviews__box-item-special {
+    font-weight: 300;
+    font-size: 14px;
+    margin-bottom: 20px;
 }
 
 .reviews__box-navigation {
